Ejemplo 3 -Alfredo/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> tag
Rule 1     tag -> simpletag
Rule 2     tag -> lonetag
Rule 3     simpletag -> opentag child closetag
Rule 4     opentag -> TAGOPEN tagname attrs TAGCLOSE
Rule 5     closetag -> TAGCLOSEOPEN tagname TAGCLOSE
Rule 6     lonetag -> TAGOPEN tagname attrs TAGLONE
Rule 7     tagname -> SCENE
Rule 8     tagname -> MANIFEST
Rule 9     tagname -> OBJECT
Rule 10    tagname -> BUTTON
Rule 11    tagname -> TRANSITION
Rule 12    attrs -> ATTRS ATTRASSIGN atributo attrs
Rule 13    attrs -> lambda
Rule 14    atributo -> ATTRVALOPEN ATTRVALSTR ATTRVALCLOSE
Rule 15    atributo -> ATTRVALOPEN1 ATTRVALSTR1 ATTRVALCLOSE1
Rule 16    child -> child children
Rule 17    child -> lambda
Rule 18    children -> tag
Rule 19    lambda -> <empty>

Terminals, with rules where they appear

ATTRASSIGN           : 12
ATTRS                : 12
ATTRVALCLOSE         : 14
ATTRVALCLOSE1        : 15
ATTRVALOPEN          : 14
ATTRVALOPEN1         : 15
ATTRVALSTR           : 14
ATTRVALSTR1          : 15
BUTTON               : 10
MANIFEST             : 8
OBJECT               : 9
SCENE                : 7
TAGCLOSE             : 4 5
TAGCLOSEOPEN         : 5
TAGLONE              : 6
TAGOPEN              : 4 6
TRANSITION           : 11
error                : 

Nonterminals, with rules where they appear

atributo             : 12
attrs                : 4 6 12
child                : 3 16
children             : 16
closetag             : 3
lambda               : 13 17
lonetag              : 2
opentag              : 3
simpletag            : 1
tag                  : 18 0
tagname              : 4 5 6

Parsing method: LALR

state 0

    (0) S' -> . tag
    (1) tag -> . simpletag
    (2) tag -> . lonetag
    (3) simpletag -> . opentag child closetag
    (6) lonetag -> . TAGOPEN tagname attrs TAGLONE
    (4) opentag -> . TAGOPEN tagname attrs TAGCLOSE

    TAGOPEN         shift and go to state 1

    lonetag                        shift and go to state 2
    tag                            shift and go to state 3
    simpletag                      shift and go to state 4
    opentag                        shift and go to state 5

state 1

    (6) lonetag -> TAGOPEN . tagname attrs TAGLONE
    (4) opentag -> TAGOPEN . tagname attrs TAGCLOSE
    (7) tagname -> . SCENE
    (8) tagname -> . MANIFEST
    (9) tagname -> . OBJECT
    (10) tagname -> . BUTTON
    (11) tagname -> . TRANSITION

    SCENE           shift and go to state 9
    MANIFEST        shift and go to state 11
    OBJECT          shift and go to state 8
    BUTTON          shift and go to state 7
    TRANSITION      shift and go to state 6

    tagname                        shift and go to state 10

state 2

    (2) tag -> lonetag .

    $end            reduce using rule 2 (tag -> lonetag .)
    TAGCLOSEOPEN    reduce using rule 2 (tag -> lonetag .)
    TAGOPEN         reduce using rule 2 (tag -> lonetag .)


state 3

    (0) S' -> tag .



state 4

    (1) tag -> simpletag .

    $end            reduce using rule 1 (tag -> simpletag .)
    TAGCLOSEOPEN    reduce using rule 1 (tag -> simpletag .)
    TAGOPEN         reduce using rule 1 (tag -> simpletag .)


state 5

    (3) simpletag -> opentag . child closetag
    (16) child -> . child children
    (17) child -> . lambda
    (19) lambda -> .

    TAGCLOSEOPEN    reduce using rule 19 (lambda -> .)
    TAGOPEN         reduce using rule 19 (lambda -> .)

    child                          shift and go to state 12
    lambda                         shift and go to state 13

state 6

    (11) tagname -> TRANSITION .

    ATTRS           reduce using rule 11 (tagname -> TRANSITION .)
    TAGLONE         reduce using rule 11 (tagname -> TRANSITION .)
    TAGCLOSE        reduce using rule 11 (tagname -> TRANSITION .)


state 7

    (10) tagname -> BUTTON .

    ATTRS           reduce using rule 10 (tagname -> BUTTON .)
    TAGLONE         reduce using rule 10 (tagname -> BUTTON .)
    TAGCLOSE        reduce using rule 10 (tagname -> BUTTON .)


state 8

    (9) tagname -> OBJECT .

    ATTRS           reduce using rule 9 (tagname -> OBJECT .)
    TAGLONE         reduce using rule 9 (tagname -> OBJECT .)
    TAGCLOSE        reduce using rule 9 (tagname -> OBJECT .)


state 9

    (7) tagname -> SCENE .

    ATTRS           reduce using rule 7 (tagname -> SCENE .)
    TAGLONE         reduce using rule 7 (tagname -> SCENE .)
    TAGCLOSE        reduce using rule 7 (tagname -> SCENE .)


state 10

    (6) lonetag -> TAGOPEN tagname . attrs TAGLONE
    (4) opentag -> TAGOPEN tagname . attrs TAGCLOSE
    (12) attrs -> . ATTRS ATTRASSIGN atributo attrs
    (13) attrs -> . lambda
    (19) lambda -> .

    ATTRS           shift and go to state 14
    TAGLONE         reduce using rule 19 (lambda -> .)
    TAGCLOSE        reduce using rule 19 (lambda -> .)

    attrs                          shift and go to state 16
    lambda                         shift and go to state 15

state 11

    (8) tagname -> MANIFEST .

    ATTRS           reduce using rule 8 (tagname -> MANIFEST .)
    TAGLONE         reduce using rule 8 (tagname -> MANIFEST .)
    TAGCLOSE        reduce using rule 8 (tagname -> MANIFEST .)


state 12

    (3) simpletag -> opentag child . closetag
    (16) child -> child . children
    (5) closetag -> . TAGCLOSEOPEN tagname TAGCLOSE
    (18) children -> . tag
    (1) tag -> . simpletag
    (2) tag -> . lonetag
    (3) simpletag -> . opentag child closetag
    (6) lonetag -> . TAGOPEN tagname attrs TAGLONE
    (4) opentag -> . TAGOPEN tagname attrs TAGCLOSE

    TAGCLOSEOPEN    shift and go to state 17
    TAGOPEN         shift and go to state 1

    closetag                       shift and go to state 18
    lonetag                        shift and go to state 2
    tag                            shift and go to state 19
    simpletag                      shift and go to state 4
    children                       shift and go to state 20
    opentag                        shift and go to state 5

state 13

    (17) child -> lambda .

    TAGCLOSEOPEN    reduce using rule 17 (child -> lambda .)
    TAGOPEN         reduce using rule 17 (child -> lambda .)


state 14

    (12) attrs -> ATTRS . ATTRASSIGN atributo attrs

    ATTRASSIGN      shift and go to state 21


state 15

    (13) attrs -> lambda .

    TAGLONE         reduce using rule 13 (attrs -> lambda .)
    TAGCLOSE        reduce using rule 13 (attrs -> lambda .)


state 16

    (6) lonetag -> TAGOPEN tagname attrs . TAGLONE
    (4) opentag -> TAGOPEN tagname attrs . TAGCLOSE

    TAGLONE         shift and go to state 22
    TAGCLOSE        shift and go to state 23


state 17

    (5) closetag -> TAGCLOSEOPEN . tagname TAGCLOSE
    (7) tagname -> . SCENE
    (8) tagname -> . MANIFEST
    (9) tagname -> . OBJECT
    (10) tagname -> . BUTTON
    (11) tagname -> . TRANSITION

    SCENE           shift and go to state 9
    MANIFEST        shift and go to state 11
    OBJECT          shift and go to state 8
    BUTTON          shift and go to state 7
    TRANSITION      shift and go to state 6

    tagname                        shift and go to state 24

state 18

    (3) simpletag -> opentag child closetag .

    $end            reduce using rule 3 (simpletag -> opentag child closetag .)
    TAGCLOSEOPEN    reduce using rule 3 (simpletag -> opentag child closetag .)
    TAGOPEN         reduce using rule 3 (simpletag -> opentag child closetag .)


state 19

    (18) children -> tag .

    TAGCLOSEOPEN    reduce using rule 18 (children -> tag .)
    TAGOPEN         reduce using rule 18 (children -> tag .)


state 20

    (16) child -> child children .

    TAGCLOSEOPEN    reduce using rule 16 (child -> child children .)
    TAGOPEN         reduce using rule 16 (child -> child children .)


state 21

    (12) attrs -> ATTRS ATTRASSIGN . atributo attrs
    (14) atributo -> . ATTRVALOPEN ATTRVALSTR ATTRVALCLOSE
    (15) atributo -> . ATTRVALOPEN1 ATTRVALSTR1 ATTRVALCLOSE1

    ATTRVALOPEN     shift and go to state 26
    ATTRVALOPEN1    shift and go to state 27

    atributo                       shift and go to state 25

state 22

    (6) lonetag -> TAGOPEN tagname attrs TAGLONE .

    TAGCLOSEOPEN    reduce using rule 6 (lonetag -> TAGOPEN tagname attrs TAGLONE .)
    TAGOPEN         reduce using rule 6 (lonetag -> TAGOPEN tagname attrs TAGLONE .)
    $end            reduce using rule 6 (lonetag -> TAGOPEN tagname attrs TAGLONE .)


state 23

    (4) opentag -> TAGOPEN tagname attrs TAGCLOSE .

    TAGCLOSEOPEN    reduce using rule 4 (opentag -> TAGOPEN tagname attrs TAGCLOSE .)
    TAGOPEN         reduce using rule 4 (opentag -> TAGOPEN tagname attrs TAGCLOSE .)


state 24

    (5) closetag -> TAGCLOSEOPEN tagname . TAGCLOSE

    TAGCLOSE        shift and go to state 28


state 25

    (12) attrs -> ATTRS ATTRASSIGN atributo . attrs
    (12) attrs -> . ATTRS ATTRASSIGN atributo attrs
    (13) attrs -> . lambda
    (19) lambda -> .

    ATTRS           shift and go to state 14
    TAGLONE         reduce using rule 19 (lambda -> .)
    TAGCLOSE        reduce using rule 19 (lambda -> .)

    attrs                          shift and go to state 29
    lambda                         shift and go to state 15

state 26

    (14) atributo -> ATTRVALOPEN . ATTRVALSTR ATTRVALCLOSE

    ATTRVALSTR      shift and go to state 30


state 27

    (15) atributo -> ATTRVALOPEN1 . ATTRVALSTR1 ATTRVALCLOSE1

    ATTRVALSTR1     shift and go to state 31


state 28

    (5) closetag -> TAGCLOSEOPEN tagname TAGCLOSE .

    $end            reduce using rule 5 (closetag -> TAGCLOSEOPEN tagname TAGCLOSE .)
    TAGCLOSEOPEN    reduce using rule 5 (closetag -> TAGCLOSEOPEN tagname TAGCLOSE .)
    TAGOPEN         reduce using rule 5 (closetag -> TAGCLOSEOPEN tagname TAGCLOSE .)


state 29

    (12) attrs -> ATTRS ATTRASSIGN atributo attrs .

    TAGLONE         reduce using rule 12 (attrs -> ATTRS ATTRASSIGN atributo attrs .)
    TAGCLOSE        reduce using rule 12 (attrs -> ATTRS ATTRASSIGN atributo attrs .)


state 30

    (14) atributo -> ATTRVALOPEN ATTRVALSTR . ATTRVALCLOSE

    ATTRVALCLOSE    shift and go to state 32


state 31

    (15) atributo -> ATTRVALOPEN1 ATTRVALSTR1 . ATTRVALCLOSE1

    ATTRVALCLOSE1   shift and go to state 33


state 32

    (14) atributo -> ATTRVALOPEN ATTRVALSTR ATTRVALCLOSE .

    ATTRS           reduce using rule 14 (atributo -> ATTRVALOPEN ATTRVALSTR ATTRVALCLOSE .)
    TAGLONE         reduce using rule 14 (atributo -> ATTRVALOPEN ATTRVALSTR ATTRVALCLOSE .)
    TAGCLOSE        reduce using rule 14 (atributo -> ATTRVALOPEN ATTRVALSTR ATTRVALCLOSE .)


state 33

    (15) atributo -> ATTRVALOPEN1 ATTRVALSTR1 ATTRVALCLOSE1 .

    ATTRS           reduce using rule 15 (atributo -> ATTRVALOPEN1 ATTRVALSTR1 ATTRVALCLOSE1 .)
    TAGLONE         reduce using rule 15 (atributo -> ATTRVALOPEN1 ATTRVALSTR1 ATTRVALCLOSE1 .)
    TAGCLOSE        reduce using rule 15 (atributo -> ATTRVALOPEN1 ATTRVALSTR1 ATTRVALCLOSE1 .)

